# engine

./: .gitignore  CMakeLists.txt  README.md  engine.sln  engine.vcxproj  engine.vcxproj.filters
res/Shaders/: 3d.vert  monocolor_basic.frag  monocolor_basic.vert  texture_light.frag  triag.frag  triag.vert  white.frag
src/: Main.cpp
src/Keyboard/: KeybindManager.cpp  KeybindManager.h  Keybinds.h
src/ObjectRenderer/: ObjectLoader.cpp  ObjectLoader.h  ObjectRenderer.cpp  ObjectRenderer.h  Triangulation.cpp
src/ObjectRenderer/Deprecated/: ObjectLoader.cpp  Triangulation.h
src/Primitives/: BufferArray.cpp  BufferArray.h  Program.cpp  Program.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/Shader/: Shader.cpp  Shader.h
src/Util/: Defines.h  GLConfig.h  Math.h  OrbitalCamera.cpp  OrbitalCamera.h  Singleton.h
src/Window/: Window.cpp  Window.h
